--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@material-ui/icons": "^4.9.1",
     "gatsby": "^2.24.66",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-typography": "^2.5.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
