--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
